# fe-admin/src/views/content/authors/columnHeader.ts
@@ -1,0 +1,44 @@
+export const ColumnNames = {
+  id: {
+    label: "ID",
+    sortKey: "id",
+    key: "id",
+  },
+  name: {
+    label: "Name",
+    sortKey: "name",
+    key: "name",
+  },
+  biography: {
+    label: "Biography",
+    sortKey: "biography",
+    key: "biography",
+  },
+  birth_day: {
+    label: "BirthDay",
+    sortKey: "birth_day",
+    key: "birth_day",
+  },
+  created_by: {
+    label: "Creator",
+    key: "created_by",
+  },
+  created_at: {
+    label: "Created At",
+    sortKey: "created_at",
+    key: "created_at",
+  },
+  updated_by: {
+    label: "Updator",
+    key: "updated_by",
+  },
+  updated_at: {
+    label: "Updated At",
+    sortKey: "updated_at",
+    key: "updated_at",
+  },
+  action: {
+    label: "Action",
+    key: "action",
+  },
+};
