# fe-admin/src/views/content/comics/columnHeader.ts
@@ -1,0 +1,53 @@
+export const ColumnNames = {
+  id: {
+    label: "ID",
+    sortKey: "id",
+    key: "id",
+  },
+  cover: {
+    label: "Cover",
+    key: "cover",
+  },
+
+  title: {
+    label: "Title",
+    sortKey: "title",
+    key: "title",
+  },
+  description: {
+    label: "Description",
+    key: "description",
+  },
+  language: { label: "Language", key: "language" },
+  audience: { label: "Audience", key: "audience" },
+  active: {
+    label: "Active Status",
+    key: "active",
+  },
+  code: {
+    label: "Code",
+    key: "code",
+  },
+  created_by: {
+    label: "Creator",
+    key: "created_by",
+  },
+  created_at: {
+    label: "Created At",
+    sortKey: "created_at",
+    key: "created_at",
+  },
+  updated_by: {
+    label: "Updator",
+    key: "updated_by",
+  },
+  updated_at: {
+    label: "Updated At",
+    sortKey: "updated_at",
+    key: "updated_at",
+  },
+  action: {
+    label: "Action",
+    key: "action",
+  },
+};
