# fe-admin/src/views/content/subjects/columnHeader.ts
@@ -1,0 +1,40 @@
+export const ColumnNames = {
+  id: {
+    label: "ID",
+    sortKey: "id",
+    key: "id",
+  },
+  name: {
+    label: "Name",
+    sortKey: "name",
+    key: "name",
+  },
+  position: {
+    label: "Position",
+    sortKey: "position",
+    key: "position",
+  },
+  lang: { label: "lang", key: "lang" },
+  created_by_name: {
+    label: "Creator",
+    key: "created_by_name",
+  },
+  created_at: {
+    label: "Created At",
+    sortKey: "created_at",
+    key: "created_at",
+  },
+  updated_by_name: {
+    label: "Updator",
+    key: "updated_by_name",
+  },
+  updated_at: {
+    label: "Updated At",
+    sortKey: "updated_at",
+    key: "updated_at",
+  },
+  action: {
+    label: "Action",
+    key: "action",
+  },
+};
